Migration to the latest libs and to swift 5.

--- a/SumDU/Resources/Info.plist
+++ b/SumDU/Resources/Info.plist
@@ -44,5 +44,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>1</string>
 </dict>
 </plist>
