Upgraded Fabric to Firebase Crashlytics

--- a/SumDU/Resources/GoogleService-Info.plist
+++ b/SumDU/Resources/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>9711528499-abma08bk57i1h4nbjlbjsal161ab9uoi.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.9711528499-abma08bk57i1h4nbjlbjsal161ab9uoi</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>9711528499-o033r1rdaa7891eupvnd9fjmv27uu5re.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCQsDSaP_deJeZsGGXOgGlW3aKGTWSDU_o</string>
 	<key>GCM_SENDER_ID</key>
